--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "primeicons": "^5.0.0",
     "primereact": "^8.4.0",
     "react": "^18.2.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-reveal": "^1.2.2",
