--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "flag-icons": "^6.6.6",
+    "lodash": "^4.17.21",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primereact": "^8.4.0",
@@ -32,7 +34,6 @@
       "react-app",
       "react-app/jest"
     ]
-  
   },
   "browserslist": {
     "production": [
